--- a/Logistica/Properties/Resources.resx
+++ b/Logistica/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="vittorio-veneto-3-1024x702" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\vittorio-veneto-3-1024x702.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="europa" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\europa.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
